flavour prices fixed

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               name="type"
               value="Chocolate"
             />
-            <span class="mdl-radio__label">Chocolate</span>
+            <span class="mdl-radio__label">Chocolate ($0.70)</span>
           </label>
           <br />
 
@@ -145,7 +145,7 @@
               name="type"
               value="Strawberry"
             />
-            <span class="mdl-radio__label">Strawberry</span>
+            <span class="mdl-radio__label">Strawberry ($0.80)</span>
           </label>
           <br />
 
@@ -160,7 +160,7 @@
               name="type"
               value="Vanilla"
             />
-            <span class="mdl-radio__label">Vanilla</span>
+            <span class="mdl-radio__label">Vanilla ($0.50)</span>
           </label>
           <br />
 
